--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,17 @@ spring:
 #      resilience4j:
 #        enabled: false
 
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
+  client:
+    service-url:
+#      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka # for docker
+
 comment-service:
-#  graphql-url: http://localhost:8082/graphql
-  graphql-url: http://comment-service:8082/graphql # for docker
+#  graphql-url: http://localhost:8765/comment-service/graphql
+  graphql-url: http://api-gateway:8765/comment-service/graphql # for docker
 
 post-service:
   grpc:
@@ -27,11 +35,11 @@ post-service:
     port: 9090
 
 user-service:
-#  url: http://localhost:8083/api/v1/users
-  url: http://user-service:8083/api/v1/users # for docker
+#  url: http://localhost:8765/user-service/api/v1/users
+  url: http://api-gateway:8765/user-service/api/v1/users # for docker
   auth:
-#    url: http://localhost:8083/auth
-    url: http://user-service:8083/auth # for docker
+#    url: http://localhost:8765/user-service/auth
+    url: http://api-gateway:8765/user-service/auth # for docker
     username: "admin"
     password: "admin"
     requestHeader: "authorization"
