application properties are now taken from the config-server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,6 @@
-server:
-  port: 8084
-
 spring:
   application:
     name: frontend-service
-  mvc:
-    hiddenmethod:
-      filter:
-        enabled: true
-  cloud:
-    openfeign:
-      circuitbreaker:
-        enabled: true
-#    circuitbreaker:
-#      resilience4j:
-#        enabled: false
-
-eureka:
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
-  client:
-    service-url:
-#      defaultZone: http://localhost:8761/eureka
-      defaultZone: http://eureka-server:8761/eureka # for docker
-
-comment-service:
-#  graphql-url: http://localhost:8765/comment-service/graphql
-  graphql-url: http://api-gateway:8765/comment-service/graphql # for docker
-
-post-service:
-  grpc:
-#    host: localhost
-    host: post-service # for docker
-    port: 9090
-
-user-service:
-#  url: http://localhost:8765/user-service/api/v1/users
-  url: http://api-gateway:8765/user-service/api/v1/users # for docker
-  auth:
-#    url: http://localhost:8765/user-service/auth
-    url: http://api-gateway:8765/user-service/auth # for docker
-    username: "admin"
-    password: "admin"
-    requestHeader: "authorization"
+  config:
+#    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888 # for docker
